--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "value": "2631e706-46f4-4d93-ac8b-39e22f6c92a9"
     }
   },
-  "website": "https://github.com/qm6yu77aro/",
+  "website": "https://github.com/qm6yu77aro/Nexdv",
   "repository": "https://github.com/qm6yu77aro/Nexdv",
   "stack": "container"
 }
